@@ -197,6 +197,13 @@ void CGUIWindowManager::PreviousWindow()
   if (!pCurrentWindow || m_windowHistory.size() < 2)
     return;     // no windows or window history yet
 
+  if (pCurrentWindow->GetPreviousWindow() != WINDOW_INVALID)
+  {
+    // TODO: we may need to test here for the
+    //       whether our history should be changed
+    ActivateWindow(pCurrentWindow->GetPreviousWindow());
+    return;
+  }
   // get the previous window in our stack
   m_windowHistory.pop();
   int previousWindow = GetActiveWindow();
